@@ -1,5 +1,14 @@
 2008-10-07  Bastien Nocera  <hadess@hadess.net>
 
+	* src/backend/bacon-video-widget-gst-0.10.c (got_time_tick),
+	(bacon_video_widget_close), (bacon_video_widget_pause):
+	* src/backend/bacon-video-widget-xine.c
+	(bacon_video_widget_tick_send), (bacon_video_widget_close):
+	When streaming audio or video, make sure pause actually stops the
+	stream, as per the xine-lib backend
+
+2008-10-07  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plugins/youtube/youtube.py: Patch from Edward Hervey
 	<bilboed@gmail.com> to fix the threading in the youtube plugin
 	(Closes: #548879)
